log
Tue 11 Jun 2024 10:49:31 PM UTC: 
 sudoku.c | 46 +++++++++++++++++++++++++++++++++++++++++++++-
 1 file changed, 45 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:49:11: error: variable ‘row’ set but not used [-Werror=unused-but-set-variable]
   49 |       int row[10] = {0};
      |           ^~~
sudoku.c: In function ‘DFS’:
sudoku.c:103:13: error: unused variable ‘current’ [-Werror=unused-variable]
  103 |       Node* current = (Node*)top(s);
      |             ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
a9005d5
Tue 11 Jun 2024 10:50:47 PM UTC: 
 sudoku.c | 17 +++++++++++++++++
 1 file changed, 17 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:49:11: error: variable ‘row’ set but not used [-Werror=unused-but-set-variable]
   49 |       int row[10] = {0};
      |           ^~~
cc1: all warnings being treated as errors
Compilation failed
f180b05
Tue 11 Jun 2024 10:53:51 PM UTC: 
 sudoku.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  7|2
total_score: 50/70
42a4657
Tue 11 Jun 2024 10:55:38 PM UTC: 
 sudoku.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
 tests:  8|1
total_score: 60/70
d920bbc
Tue 11 Jun 2024 10:56:36 PM UTC: 
 sudoku.c | 11 ++++++-----
 1 file changed, 6 insertions(+), 5 deletions(-)
In file included from test.c:5:
sudoku.c: In function ‘DFS’:
sudoku.c:117:13: error: implicit declaration of function ‘freeStack’; did you mean ‘createStack’? [-Werror=implicit-function-declaration]
  117 |             freeStack(s);  // Liberamos el stack antes de retornar
      |             ^~~~~~~~~
      |             createStack
cc1: all warnings being treated as errors
Compilation failed
ba56989
